Solving EM algorithm

--- a/Specializations/Machine Learning/Clustering & Retrieval/Week 4/Assignment 1/3_em-for-gmm_blank.ipynb
+++ b/Specializations/Machine Learning/Clustering & Retrieval/Week 4/Assignment 1/3_em-for-gmm_blank.ipynb
@@ -45,7 +45,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO] graphlab.cython.cy_server: GraphLab Create v2.1 started. Logging: /tmp/graphlab_server_1470694564.log\n"
+      "[INFO] graphlab.cython.cy_server: GraphLab Create v2.1 started. Logging: /tmp/graphlab_server_1470809673.log\n"
      ]
     },
     {
@@ -175,7 +175,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAZsAAAEKCAYAAADEovgeAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3X2UZHV95/H3V4bMsGkYxLOMzjhjt02iC4YFccOseqBK\nGMw6x5mzBk1MNcbAHnxgTdDVgHFbGirhmKgZ18dIEtbIjEoSNLCKypCxGldtgjIuER9nuhCccVXk\neQFxnO/+UVVtP9yqureqfveh6vM6p8703Lq37re7qu73/p7N3REREQnpSVkHICIiw0/JRkREglOy\nERGR4JRsREQkOCUbEREJTslGRESCC5ZszOwLZna4zePGUOcVEZH8WRXwtV8HHLNs2/OBdwPXBzyv\niIjkjKU5qNPM/hb4PeBp7v5AaicWEZFMpdZmY2ZHAecCNyjRiIiMljQ7CLwMGAP+LsVziohIDqRW\njWZmnwdOBja4++FUTioiIrmQSsnGzJ4GnAXsVKIRERk9aVWjnQcY8NGUziciIjmSSjWamX0DeMLd\nn9tlP613ICJSIO5ucfYLXrIxs9OAE4GPxNnf3XP7uOyyyzKPoegx5j2+IsSY9/iKEGPe4ytKjEmk\nUY32+8DPgY+lcC4REcmhoMnGzFYBvwt81t3vDXkuERHJr5DT1eDuh4DjQ54jTaVSKesQusp7jHmP\nD/IfY97jg/zHmPf4oBgxJpHqdDXdmJnnKR4REWnPzPC8dBAQERFRshERkeCUbEREJDglGxERCU7J\nRkREglOyGVL1ep2pqSnK5TJTU1PU6/WsQxKREaauz0OoXq+zZcsW9u/fv7BtcnKS3bt3MzExkWFk\nIjJM1PV5xE1PTy9JNAD79+9neno6o4hEZNQp2QyhAwcORG4/ePBgypGIiDQo2QyhDRs2RG5fv359\nypGIiDSozWYIqc1GRNKQpM0meLIxs5cAlwDPBQ4D3wH+2N1rEfsq2QxIvV5nenqagwcPsn79eqrV\nqhKNiAxUbpKNmb0GeB/wXuCzNKrtTgHudPcbI/ZXshERKYhcJBszewbwLeASd39fzGOUbERECiIv\nXZ8vAH4BfDjgOUREpABCJpsXAN8GXmlm+8zs52b2PTN7fcBziohIDoVcqXN98/EXwFuBeeDlwPvN\n7Ii4VWsiIlJ8IdtsvgOcALzM3a9ftP1G4BR3XzHoQ202IiLFkZc2m582/7152fabgHVmti7guUVE\nJEdCVqPdCZye9KCZmZmFn0ulEqVSaXARFVhr3MyBAwfYsGGDxs2ISOpqtRq1Wq2nY0NWo70E+F/A\ny939k4u2fx54trs/I+KYwlWjpZEENCOAiORRLsbZNAP5Z+Bk4L/T6CDwCuB84NXufk3E/oVKNmkl\ngampKXbt2rVie6VSYefOnQM7j4hIEnlpswHYDnwCmKFRyvkPwO9FJZoiSmsq/0HM4qzF1EQkSyHb\nbHD3R4A3NB9DJ62p/PudxTmqBDY3N9e2BKb2IREZtKDJZtilNZV/tVplbm5uRXVdtVqNdXynEtjy\narikiUlEJA6tZ9OHarXK5OTkkm1JkkBcExMT7N69m0qlQrlcplKpJLr4JymBaZVPEQlBJZs+tJJA\nGlP5T0xMdOwM0KnqK0kJTKt8ikgISjZ96pYE0tCt6uvCCy/k2muv5dChQwvPr1q1igsvvHDFa2mV\nTxEJQdVoQ6Bb1ddVV121JNEAHDp0iKuuumrFa6VVNSgio0UlmyHQreorSdVYmlWDIjI6lGyGQLeq\nr6RVY3moGhSR4RJ0BoGkijaDQF50m8mg15kONN5GRDrJzXQ1SSnZ9K6VGNpVfXV7Pur1NB+biHSi\nZCN903xsItJNnuZGk4LSeBsRGSQlG4mk8TYiMkgh17M5E/hCxFMPuPtxbY5RNVpOqM1GRLrJRZtN\nM9nsoTHj81cXPXXI3W9vc4ySTQxp9RJL2qlAREZL3pLNFnffE/MYJZsuVOIQkbzIUweBWEFIfJqV\nWUSKKI0OArvM7JCZ3Wtmu8xsYwrnzNygV8Zsvd6nP/3pyOd76SUWN0at8iki/Qo5Xc2DwLuAWeAh\n4FTgbcCXzexUd7834LkzNegFyKJeb7mkvcTixqjF1ERkEFId1GlmpwL/Alzp7pdFPD8UbTaDHhDZ\n7vVaemmzafea27dvZ2xsbKHzwcMPP8wNN9ywYj8N7hSRJG02qU7E6e57zey7wG+med60DXpAZLvX\nO/bYY9m6dWtPvcTaveZNN93EY489tvD/NWvWRO6nwZ0ikkTuZn2emZlZ+LlUKlEqlTKLpVeDHhDZ\n7vW2bt26onQRt1t0u9dcnGgAHn/88cj9jj766Dihi8gQqdVq1Gq13g5299QewPOAQ8BlbZ73YTA/\nP++Tk5MOLDwmJyd9fn4+6OslOW/UvmvWrFny/9Zj9erVK7Zt3Lix599nEObn571SqXipVPJKpZJp\nLCKjqnnNjnX9DznO5hpgP7CXRgeB5wKXAo8Ap7n7fRHHeKh40jboAZFxXi9pW9Hy12zXPrNhw4bI\nares2m001kgkH5K02YQsxVwKfB24H/gZ8H3gQ8C6DseESb8jYvPmzZElk3K5HOv4diWjfl938esP\nojRSqVQi46lUKj29noj0hgQlm2BtNu7+DuAdoV4/b7JeaKxer/ONb3wj8rm4bUXtloSenp5mbm6u\n59dtxTeoLtSakVqkgOJmpTQeFLRkM+g2ml60u9sfGxvrO45B/H6DLI2oZCOSDyQo2WiJgQEIMYVM\n0lH77e72n/Oc5/RdwmqVeCqVCuVymUqlkrhEMsjSSLVaZXJycsm2yclJqtVq4tcSkXTkrutzEbUb\n2d9pxH879Xqdiy++mJtuumlJt+NuVU7tujIvvyj3amJioq/OAIPsDt6uuk+dA0RyLG4RKI0HBa1G\nGx8fj6zWGR8fT/Q6UdVVxKwmStrtOe1uw3moahSRwSIPHQRGybp167jrrrtWbH/qU5+a6HWiquMW\n61TlFPduP6u5zlQaERltSjYDcMIJJ3Drrbeu2J60Cqtdu0ZLtyqnOFVdndqXQo+Z6bcqTkSKSx0E\nBmBQDdbt2jV6fb2WxZ0Ndu/eHbmPug2LSEgq2QzAoKqIqtUqc3NzS0oeRx11FOeccw47duyI/XqL\nx/wcc8wx7N27l3vuuafjMb3O2yYiEkeqSwx0M0zT1fSq32lu4qx9s5ymehGRXiSZrkbJZsh0W/um\nZd26dZx44olqqBeRnuV2PRsJr1sng5azzz5bjfUikhp1EBgynToZtGi0vYikLbVkY2afM7PDZnZF\nWucMLemUMmmI6hm3adMmtm/f3vNUMyIi/UqlGs3MXgmcTGPk+FDIanBkNxo8KSJ5FLyDgJk9Gfgm\ncDHwceBP3f3tbfYtTAeBpAuV9SLrZQtERDrJWweBPwfucPdrzezjKZwvFaHXVMlryUlEpBdB22zM\n7IXAFHBRyPNkYZCzGEdpN63M5s2bc9M+JCISV7BkY2ZHAn8FvNPd94U6T1ZCr6nSruT04x//mF27\ndrFlyxYlHBEpjJAlm0uANcCVAc+RmUEsKNZJty7M/S7OJiKSpiAdBMxsI/Ad4ALgxtZm4D7gnTQS\n0MPufnjZcYXpINCvbo3/caadKZfL7NmzJ41wRURWyEMHgWcCq4GdNJJMiwNvAd4MnArcsfzAmZmZ\nhZ9LpRKlUilQiNmJ0/i/uAvzzTffzI9+9KMVr6PJM0UkTbVajVqt1tOxoUo2xwCnRDxVA64B/gb4\nmrs/uuy4kSjZJO02HZWcNHmmiGQt85KNuz8E3LJ8u5kBfN/dvxjivEWRtNu0BmqKSNGlPRFna/35\nkdZLt2mtcikiRaYlBjKgajERGQZaz6YA+l0kTUQka0o2IiISXJJko/VsREQkOCUbEREJTslGRESC\nU7IREZHglGxERCQ4JRsREQlOyUZERIJTshERkeCUbEREJDglG0lNvV5namqKcrnM1NSUlrUWGSHB\npqsxs3NoLA19IvBk4CfAl4EZd/9Wm2M0Xc2Q0uSjIsMnL9PVHAd8FbgI2AJcCpwEfKW5bLSMkOnp\n6RVLXO/fv5/p6emMIhKRNAVbz8bdPwF8YvE2M7sN+DZwLrAj1Lklf5IuGCciwyXtNpv7mv8eSvm8\nkrFeFowTkeERfIkBM3sScAQwDrwDOB04xd3vjdhXbTZDSm02IsMnV+vZNKvOTmv+93vANnf/Tpt9\nlWyGmBaMExkueUs2zwKOAZ4JvBl4KvACd787Yl8lGxGRgshVsllyMrO1wF3Ax9399RHPK9mIiBRE\nkmQTrDdaFHd/0Mz2ASe022dmZmbh51KpRKlUCh+YiIh0VavVqNVqPR2bdslmHbAPuEYlGxGRYstF\nycbMPgncDtwBPAQ8C7gYeAL4y1DnFRGR/AlZjfYV4BXAm4BfAe4BvgC8I6pzgIiIDK9Uq9G6UTWa\niEhx5GVuNBEREUDJRkREUqBkIyIiwSnZiIhIcEo2IiISnJKNiIgEp2QjIiLBKdnIyKjX60xNTVEu\nl5mamqJer2cdksjI0KBOGQlavE1k8DSoU2SZ6enpJYkGYP/+/UxPT2cUkchoUbKRkXDgwIHI7QcP\nHkw5EpHRpGQjI2HDhg2R29evX59yJCKjKViyMbNzzexTZna3mT1qZt82syvNbCzUOUXaqVarTE5O\nLtk2OTlJtVrNKKLBUKcHKYpgHQTM7CvAD4BPNf89Bbgc+Ja7P7/NMeogIF3V63Wmp6c5cOAAGzZs\noFqtxmrkbx138OBB1q9fH/u4vFKnB8lakg4CIZPNU9z9p8u2nQd8BDjL3WsRxyjZSEdFvsD2miTb\nmZqaYteuXSu2VyoVdu7c2U+oIrHkYqXO5Ymm6TbAgOgKdJEuOvUqy/MFNipJzs3N9ZUk1elBiiTt\nDgIlwIFvpXxeGRJFvcCG6HqtTg9SJKklGzPbQKPNZre7357WeWW4FPUCGyJJDmunBxlOqSQbM/tV\n4HrgCeD8NM4p2QrVS6qoF9gQSXJiYoLdu3dTqVQol8tUKpVCtF3JaAo+XY2ZrQE+C/wGcIa7f7PD\nvuogMARCN+IXsVdZkTs2iLSTi95ozUBW0SjRvBA4291v67K/X3bZZQv/L5VKlEqlYPFJGOolFa2I\nSVKyMeiei4NSq9Wo1WoL/7/88suzTzZmZsC1wFZga1RX54hjVLIZAuVyeckHcvH2PXv2pB+QSIEU\nqRScl4k4PwicC7wbeMzMTl/0UNfnIVbURnyRPBjWSWNDJpvfotHN+W3Al5c9Lgh4XslYURvxRfKg\nqN37uwk5qDNf5T1JTauXlNonRJIb1poBLZ4mQH4bJKMUKVaRpIa1zUbJRgb24U4jCRTpiyjSq6L0\nXFSykUQG0VU5rSSgbtUi+ZGX3mhSEINokEyrB02cWLXGi0j+BOsgIMUxiAbJtHrQdIs1xOzKItI/\nlWwksqvy2NgY+/bti10ySKsHTbdu1cM6RkGypdLyALh7bh6NcCQL8/PzXqlUfPPmzT42NuY0xkg5\n4JOTkz4/P9/1+MnJycTHxY2rVCp5pVLx+fn5hW3lcnlhW0upVFoSQ+tRLpf7ikNGV6jP9jBoXrPj\nXd/j7pjGQ8kme5VKJfJiXalUluw3Pz/v27dv9+OPP96PP/5437Ztm8/OzrZNAr3o5UseN36RuPSZ\nak/JRnoWp2QwPz/vGzduXLHPpk2bBnq318uXXHehxRJVcs0blZbbS5Js1GYjS8Rpe5menuaee+5Z\nsc/dd9+9om2kn7ruXjodtGYv2LZtG095ylNYvXo1999/PxdffLHq2XOm1Zlj165d1Go1du3axZYt\nW3L3Pg3riP7Uxc1KaTxQySZzcUoG7e70iCgB9VPK6LX6Iq2Sl/SnKNVTKi23h6rRpB+dGuDd218k\nll8o+r2Y9PoljxufZKtI1VPdvhOjKkmyCTbOprmMwKXAacC/B44Cxt397lDnlMGYmJjoOBq/Wq1y\nyy23rKhK27Rp05KZnfsde9PrhJ7tzpvk3BJekaqnun0npLuQgzpPoLGezdeAW4BzAp5LUjQxMcHs\n7CxvfOMbmZubA+D000/nPe95z5JEMIiLSS9f8nbnTXpuCatarTI3N7diiiMtRTGcUpkbzcwuAK4C\nJjqVbDQ32nDJatLMer3OmWeeGVnyqtVqfZ9bs04PTlEmnJRouZuIU8lmdGV1ManX611LXr2+rmad\nFmlQspGgRvnOXrNOi/xSkmSjiTglkVGf6HJYl+wVCU2DOiWRrCa6zMtEiEXqQSWSJyrZSCJZ3Nnn\nqTSlHlRLjXKVqiSTu2QzMzOz8HOpVKJUKmUWi6yUxZ19u9LU5s2b2bJlS+oXuJNOOomHH34YM2Pz\n5s3s2LFjJC+weboJkHTUajVqtVpvB8cd/dnPA7gA+AWwqct+AxrXKqH0M3VHr5MudpoeJ8n5+6Vp\nS5YqynQzEg55ma4G+O3m40PAYeC1zf+f0Wb/gH8WGZRepu7o50LdafqZpBe42dlZHx8f97Vr1/r4\n+LjPzs7GOq5THKN6cc3rdDNFmEl6WOQp2RxulmiWP/a02T/gn0Wy1OlC3e3iEJWoernAzc7O+qpV\nq5Yct2rVqtgJJ68X16zkMfmq9Jmu3CSbpA8lm+HV7kK9efPmWBeHVkJat25dzxe48fHxyGPHx8dj\n/Q55vLhmKY8Xdr1H6VKykb4Nsipifn6+44U+ycWh0wWuW8xr166NPNexxx4b+/fI28U1a3mbDVml\nz3Qp2UhfBnlR7VQFNjk56Zs3b058cYi6wMWJuV1iW716daK2p23btvm6dev8+OOP9+3bt2d+gR11\ni28ykt68SH+UbCSxUF/YdtUa4+PjC+ccxLnivE5Um03ShKrSTb5EvR/L32O9P+Eo2UgicRrge62K\n6FatEXXusbExn52dTVSVF7f6pNUb7cgjj+wpyalNIF863cy0Sr6zs7PqnRZIkmSTu0GdkswgRnBH\nDZqM0svAzW6DQCcmJrj66qvZunUrjzzyCACPPPII5513Hu6+ZJmATgMG4w42PeOMM6jX65TL5cjB\nad1mQtDcaPnS7v2YmJhgz549GniaJ3GzUhoPVLJJZFBVOt0GTfb6unFjjDOOhi4liKR/i15LKCrZ\n5Eu39yOt92tUx/agarTRELq9o/VoVWv1qluPpTjJrvVI2nGg0769JGq12eRLt/cjjd5po/yZULIZ\nEYP6IsVpsxnUnWDUHeAgSjb9xJK0227euvvmRVZ3953ejzRKNqNc2lWyGRGD/JC3vrDHHntssDvB\ndneAs7OzK7Zv2rTJN27cOJJ3i0WU17v7NOIa5bE9SjYjIsQXKeRdWpwpa5aPnVEJohjyfHcf+nOU\n5989NCWbAuq1CmLQX6SQd4JZ3AGOasNt2kb57j6vpbo0JEk26vqcA/10z5yYmGDnzp0Di2ViYoLd\nu3czPT3NwYMHOfroozEzzj///L4Xx0p7LRx1e01PnPd2WBdaW/6dWb9+/dD8bgMVNyv18gCeDvwj\n8ADwIHAdsLHD/uFScI4Nohge4g5+0Hdsad8BjnL1Rtq6vbejfPc/zMhDNRpwFPA94A7gpc3HHc1t\nR7U5JuTfJbf6rYII9UUOcbFOsx1mlKt2spB1rzBJX5JkE7Ia7UJgHPh1d68DmNm/NpPNa4D3BDx3\nofRbvdRu2eTp6emOVWzdqjVCjJYfdLVfJ1ksYT3KOr23mnlBQiablwJzrUQD4O53mdmXgO0o2Syo\nVqvMzc0tSRiTk5NUq9VYx/fyRY7TnlH0i3W/f1cZnKJ/lmQA4haBkj6AHwIfitj+AeBHbY4JUtQr\ngn6ql3qpoohzzDDUs6v7dD4Mw2dpOfV0zE+bzc+AKyO2V4En2hwT6m8y1Hr5Isdtz9DFWgZlmD5L\ncTpEjEIiUrIZQUm/yGqwlWGT5gW+2wDlYSvFtZMk2Vhj/8Ezs/8LfMrdX7ds+weAc919XcQxHioe\nWSqqzWZycrIwY1CGdcyGxLf4M7B27Vr27t3L3XffvfB8yM9zuyUqyuUy69evZ9euXSueq1QqqXWO\nSYuZ4e4WZ9+QHQTuBE6K2H4i8M12B83MzCz8XCqVKJVKg45LKPZAtKhEed111/HiF7+YHTt2FOJ3\nkP5EfQaWi9Mjs1edOjy067Czf/9+pqamCn2DVKvVIpNsLHGLQEkfwB8BTwDji7aNN7dd3OaYECU9\nGTKdZoke1uoKWSruTOGhxlR1qiprF9vY2NjQfVZJUI32pN5SVCx/DdwFXG9m28xsG/BPwPeBqwKe\nt6N6vc7U1BTlcpmpqSnq9Xr3gyRX2t05wi/vZmW4dfoMLBaqa3WrZqBSqVAul6lUKgtVdtVqlcnJ\nySX7j42NLaxE2zJqn9Vg1Wju/qiZvQjYAXwUMOBm4I3u/mio83aiubKGQ7sqjBYNFBx+3T4DEH5M\nVbtBrFFV1Pv27ePWW29dse9IfVbjFoHSeBC4Gk09sIZDt8Xe9H4Ov6jPwMaNG33btm257Fo9rNce\nclKNljujNmXGsFYZtu4ct23bxpo1a5Y8pxkCRkNUNdbOnTs5+uijWzeuuRJVtTZyn9W4WSmNByrZ\nDMyo9PUfpoGC0rsifN6H8bNKHsbZ9CL0OJuijy1JYmpqamT6+ovo856NvIyzyZ0ijy1JatSqDGW0\n6fOefyOVbCDdKe6zpFl2ZZTo855/I1WNNkpGqcpQRJ/3bCSpRlOyGWKtuaOKWmWo+c8kiaJ/3otI\nyUYKT3eqIvmXJNmM1DgbKY5OS12LSPEo2UguqXeRyHBRspFcUu8ikeGiNhvJJbXZiORfLtpszOxN\nZnaDmR00s8Nm9vZQ55Lh02kKd5HQhnVewSyFXBb6m8CDwO3Aa4HL3f2KLseoZCMimVKpOr5clGzc\n/UR3/4/AH9JYy0YkFborlX6oJ2QYIzddzagalQGSWiBP+qWekGEo2YyAUboAd7orHYU58aR/6gkZ\nhro+j4Ak1QJFr4LSXan0SwudhRGrZGNmZwG7Y+xac/cX9ReSDFrcC/AwlIB0Vyr9GqWlSNIUtxrt\nS8CzY+z3aB+xSCBxL8DDUAVVrVaZm5tb0ZNId6WSxKgsRZKmWMnG3R8Hvhs4FgBmZmYWfi6VSpRK\npTROO9TiXoAHWQWVVYcE3ZWKhFOr1ajVaj0dG3wGATM7Avg5MKNxNtmJM/36oJbW1TgFkdGQiyUG\nzOw0YBw4AvgE8PfAPzSf/kyztLT8GCWbDA0qSWg9eJHRkCTZhOz6/F+BVzV/duDlzQfABHB3wHNL\nDwZVBaUeYSKyXLBk4+5/APxBqNeXMAbRMKoeYSKynGZ9loFTm43IaMhFm00vlGyGh9aDFxl+SjYi\nIhJcLmZ9FhERaVGyERGR4JRsREQkOCUbEREJTslGRESCU7JJSdHXiREZJvo+pk9dn1OgQY4i+aHv\n4+Co63POJFkpU0TC0vcxG0o2KdDElCL5oe9jNoIkGzP7NTN7n5ndaWYPm9lBM7vezE4Ocb6808SU\nIvmh72M2grTZmNlFwGuBjwBfA9YClwCnAC9w971tjlObjYgEpe/j4GQ+N5qZHefu9y3bdgxwF3CD\nu7+6zXFDmWxAE1OK5Im+j4ORebJpezKzOeBhd9/S5vmhTTYiIsMml73RzOzJwHOAb6Z1zkGr1WpZ\nh9BV3mPMe3yQ/xjzHh/kP8a8xwfFiDGJNHujvb/57/9I8ZwDVYQ3P+8x5j0+yH+MeY8P8h9j3uOD\nYsSYRKxkY2ZnmdnhGI89bY5/K/C7wEXuPj/IX0BERPJvVcz9vgQ8O8Z+jy7fYGavBf4M+BN3/7sE\nsYmIyJAI2kHAzM6j0f35Xe5+SYz91TtARKRAMu+NZmb/Gfh74G/c/XVBTiIiIoUQapzNGcDngW8A\nfwgcXvT0z9z96wM/qYiI5FbcNpukysCvAM8F/vey574PPDPQeUVEJIeCdH1298vd/Yg2j66Jpghz\nq5nZm8zshmZsh83s7RnG8nQz+0cze8DMHjSz68xsY1bxLGdmG5rv55fN7P81/16bso6rxczONbNP\nmdndZvaomX3bzK40s7GsY2sxs3PM7J/N7Idm9riZ3WNm15rZv8s6tnbM7HPN9/qKrGMBMLMz2/Si\nva/70ekxs5eY2Wzz2vegmf2LmZWyjgvAzL7QoTfyjZ2ODVWy6dc5QAm4mqVzq82ZWdu51VL2X4AH\ngU/RmAcuE2Z2FPAF4DHgvObmPwP2mNnJ7v5YVrEtcgJwLo338hYa72+e/DfgB8ClzX9PAS6n8Rl8\nfnZhLXEc8FXgA8BPgE3AW4GvmNlvuPs9WQa3nJm9EjgZyFunHwfeQONv2XIoo1hWMLPXAO8D3gtc\nQaNAcArwb7KMa5HXAccs2/Z84N3A9R2PdPfcPYDjIrYdA9wHfCTr+JbFdQSNNqm3Z3T+PwJ+Dkws\n2jbe3HZx1n+fiHgvAH4BbMo6lkUxPSVi23nNOEtZx9ch7l9vfvbemHUsy+J6MvBD4Hea8V2RdUzN\nuM5svqcvyjqWNvE9g8bwkTdkHUvCuP+Wxs3usZ32y+V6Nr5sEs/mtoeA7wLR84OPrpcCc+6+sK6t\nu99FY2zU9qyCKhJ3/2nE5tsAI9+ft9b3JDd35k1/Dtzh7tdmHUiEWN10M9K6Eftw1oHE1axZOZfG\nBMsPdNo3l8kmyjDMrRbISTR6/S13J3BiyrEMkxKNKpdvZRzHEmb2JDM70sx+jcZF6SDw8YzDWmBm\nLwSmgIuyjqWDXWZ2yMzuNbNdOWrffAHwbeCVZrbPzH5uZt8zs9dnHVgHLwPGgK4D9vPaZhOl8HOr\nBXIccH/E9vtoVGdIQma2gUabzW53vz3reJa5FTit+fP3gLPc/d4M41lgZkcCfwW80933ZR1PhAeB\ndwGzwEPAqcDbgC+b2ak5+Duubz7+gkZ73DzwcuD9ZnaEu78vy+DaeBXwY+Bz3XZMpWST97nV+o1P\nhoeZ/SqNhs4ngPMzDifKFHA68EoaF8ybc9Sz7xJgDXBl1oFEcfevu/sfu/tn3P2L7v5e4LeAp9Lo\nNJC1J9EoJVzo7le7e83dL6JxIX9rtqGtZGZPA84Cdrr74W77p1Wyyfvcaj3HlwP3E12CaVfikTbM\nbA3waRo4A5VsAAACqElEQVQdLM5w99wtSu/u32n+eJuZfY7GgoSXAplWtTSrov6ERrvDmubfstU+\nstrM1tJYy6rrRSlN7r7XzL4L/GbWsQA/pdFz8+Zl228CXmxm69z9R+mH1dZ5NN7jj8bZOZVk4+6P\n02jcT6Q5t9oHaBTL3zHwwJp6jS8n7qTRbrPciah9KzYzWwVcR2Mg8tnunvu/nbs/aGb7aFygsvZM\nYDWwk6WN8A68BXgzjWqrO9IPrTDupFFqLYpXAf/H3f81zs657SDQnFvtauAqjzGJ5wi7AdhsZuOt\nDc2fX0C3fu8CgJkZ8DEanQK2u/tt2UYUj5mto1Eiz0P7yF4aM4eUafwdWw8Drmn+nIc4lzCz5wHP\nAuayjoXGmD2AFy/b/p+AH+SpVGNmp9G4of1I3GNy2UHAGnOrfQz4OvBRM1uc7XMxt1rzjz1OY5wN\nwIlm9tvNnz/TLC2l4a9p9Py53symm9uuoDEt0FUpxdDVor/N82hcgF5iZj8BfuLut2QXGQAfpNF9\n80+Bx5Z93n7g7geyCeuXzOyTwO00SgYP0bhAXkyjbekvMwwNWBiasOJ9bORxvu/uX0w9qJWxXAPs\np5EYH6JRir0UuIfGQMpMufuNZlYDPmxm/5ZGB4FXAGcDr84wtCi/T2Ms38diH5H1gKA2g4Quo9Hf\nPOoxn3V8zRj/Z4cYUx2wCDwd+AfgARo9bq5LO4YYMR5u87fak4PY6h3ey0wG60bE+BYaY3/uAx6h\n0SX7g3l7nyPi/gVwedZxNGO5lMYN7P3Az2jckH0IWJd1bItiHKOR+H4IPN6M93eyjmtZjKto9ED7\npyTHBV3PRkREBHLcZiMiIsNDyUZERIJTshERkeCUbEREJDglGxERCU7JRkREglOyERGR4JRsREQk\nOCUbEREJ7v8DMMJK6Xi/bUQAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x11ff6a910>"
+       "<matplotlib.figure.Figure at 0x120065790>"
       ]
      },
      "metadata": {},
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -286,7 +286,7 @@
     "        for j in range(num_data):\n",
     "            for k in range(num_clusters):\n",
     "                # YOUR CODE HERE\n",
-    "                resp[j, k] = ...\n",
+    "                resp[j, k] = multivariate_normal.pdf(data[j], means[k], covariances[k]) * weights[k]\n",
     "        row_sums = resp.sum(axis=1)[:, np.newaxis]\n",
     "        resp = resp / row_sums # normalize over all possible cluster assignments\n",
     "\n",
@@ -299,30 +299,30 @@
     "            \n",
     "            # Update the weight for cluster k using the M-step update rule for the cluster weight, \\hat{\\pi}_k.\n",
     "            # YOUR CODE HERE\n",
-    "            weights[k] = ...\n",
+    "            weights[k] = counts[k]/num_data\n",
     "            \n",
     "            # Update means for cluster k using the M-step update rule for the mean variables.\n",
     "            # This will assign the variable means[k] to be our estimate for \\hat{\\mu}_k.\n",
     "            weighted_sum = 0\n",
     "            for j in range(num_data):\n",
     "                # YOUR CODE HERE\n",
-    "                weighted_sum += ...\n",
+    "                weighted_sum += resp[j, k] * data[j]\n",
     "            # YOUR CODE HERE\n",
-    "            means[k] = ...\n",
+    "            means[k] = (1/counts[k]) * weighted_sum\n",
     "            \n",
     "            # Update covariances for cluster k using the M-step update rule for covariance variables.\n",
     "            # This will assign the variable covariances[k] to be the estimate for \\hat{\\Sigma}_k.\n",
     "            weighted_sum = np.zeros((num_dim, num_dim))\n",
     "            for j in range(num_data):\n",
     "                # YOUR CODE HERE (Hint: Use np.outer on the data[j] and this cluster's mean)\n",
-    "                weighted_sum += ...\n",
+    "                weighted_sum += np.outer((data[j] - means[k]),(data[j] - means[k])) * resp[j, k]\n",
     "            # YOUR CODE HERE\n",
-    "            covariances[k] = ...\n",
+    "            covariances[k] = (1/counts[k]) * weighted_sum\n",
     "          \n",
     "        \n",
     "        # Compute the loglikelihood at this iteration\n",
     "        # YOUR CODE HERE\n",
-    "        ll_latest = ...\n",
+    "        ll_latest = loglikelihood(data, weights, means, covariances)\n",
     "        ll_trace.append(ll_latest)\n",
     "        \n",
     "        # Check for convergence in log-likelihood and store\n",
@@ -354,11 +354,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 0\n",
+      "Iteration 5\n",
+      "Iteration 10\n",
+      "Iteration 15\n",
+      "Iteration 20\n",
+      "Iteration 22\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(4)\n",
     "\n",
